# object-oriented-programming_1

./: .pre-commit-config.yaml  README.md  pyproject.toml
Prog/: Ind_1.py  Ind_2.py
pythonProject/: Individual_1.py  Individual_2.py  Primer.py
